fourth stage of project

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
   <title>Paul's Bike Rentals</title>
   <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Display" rel="stylesheet">
 
-  <link rel="icon" href="/images/    " />
+  <link rel="icon" href="/images/"Mountain_biking.jpeg" />
 
   <link rel="stylesheet" type="text/css" href="/styles/buttons.css">
   <link rel="stylesheet" type="text/css" href="/styles/forms.css">
@@ -16,13 +16,13 @@
   <nav>
     <ul>
       <li>
-        <a href="/zombies">Zombies</a>
+        <a href="/customers">Customers</a>
       </li>
       <li>
-        <a href="/victims">Victims</a>
+        <a href="/bikes">Bikes</a>
       </li>
       <li>
-        <a href="/bitings">Bitings</a>
+        <a href="/rentals">Rentals</a>
       </li>
     </ul>
   </nav>
