--- a/views/bikes/edit.erb
+++ b/views/bikes/edit.erb
@@ -1,6 +1,6 @@
 <h1>EDIT A BIKE</h1>
 
-<form method="POST" action="/bikes/<%=@bike.id() %>">
+<form method="POST" action="/bike/<%=@bike.id() %>">
   <label for="name">Name:</label>
   <input id="name" name="name" type="text" value="<%=@bike.name%>"/>
   <label for="size">Size:</label>
