--- a/views/bikes/new_bike.erb
+++ b/views/bikes/new_bike.erb
@@ -1,6 +1,6 @@
 <h1>Add a new bike</h1>
 
-<form method="POST" action="/bikes">
+<form method="POST" action="/bike/">
   <label for="name">Name:</label>
   <input id="name" name="name" type="text"/>
   <label for="size">Size:</label>
