--- a/views/customers/create.erb
+++ b/views/customers/create.erb
@@ -1,2 +1,2 @@
 <p>Thanks, your customer is now created!</p>
-<a href="/customers">Back to all customers</a>
+<a href="/customer/">Back to all customers</a>
