--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,15 @@
-<h1>THIS WAN</h1>
+<h1>Paul's Bike Rentals</h1>
+
+<p></p>
+
+
+<h2>Rental</h2>
+<hr/>
+<p><a href="/rental/new">Start New Rental</a></p>
+<p><a href="/rental/new">End Rental</a></p>
+<hr/>
+
+<h2>Customer</h2>
+<hr/>
+<p><a href="/customer/new<%= %>">Add New Customer</a></p>
+<hr/>
