--- a/views/rentals/edit.erb
+++ b/views/rentals/edit.erb
@@ -1,6 +1,6 @@
 <h1>EDIT A RENTAL</h1>
 
-<form method="POST" action="/rentals">
+<form method="POST" action="/rental/">
   <label for="customer_id">Customer:</label>
   <select class="customer" name="customer_id">
     <% for customer in @customers %>
