--- a/views/customers/new_customer.erb
+++ b/views/customers/new_customer.erb
@@ -1,10 +1,8 @@
 <h1>Add a new customer</h1>
 
-<form method="POST" action="/customers">
-  <label for="first-name">First Name:</label>
-  <input id="first-name" name="first_name" type="text"/>
-  <label for="last-name">Last Name:</label>
-  <input id="last-name" name="last_name" type="text"/>
+<form method="POST" action="/customer/">
+  <label for="name">Name:</label>
+  <input id="name" name="name" type="text"/>
   <label for="address">Address:</label>
   <input id="address" name="address" type="text"/>
 
