--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,29 +2,48 @@
 <html>
 <head>
   <title>Paul's Bike Rentals</title>
-  <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Display" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 
-  <link rel="icon" href="/images/"Mountain_biking.jpeg" />
+  <!-- <link rel="icon" href="/images/"Mountain_biking.jpeg" /> -->
 
+  <link rel="stylesheet" type="text/css" href="/styles/buttons.css">
+  <link rel="stylesheet" type="text/css" href="/styles/forms.css">
+  <link rel="stylesheet" type="text/css" href="/styles/structure.css">
+  <link rel="stylesheet" type="text/css" href="/styles/tables.css">
 </head>
 <body>
 <main class="flex flex--row">
   <nav>
     <ul>
       <li>
-        <a href="/customers">Customers</a>
+        <a href="/">Home</a>
       </li>
       <li>
-        <a href="/bikes">Bikes</a>
+        <a href="/customer/">Customers</a>
       </li>
       <li>
-        <a href="/rentals">Rentals</a>
+        <a href="/bike/">All Bikes</a>
       </li>
+      <li>
+        <a href="/bike/available">Bikes Available</a>
+      </li>
+      <li>
+        <a href="/bike/unavailable">Current Rentals</a>
+      </li>
+      <li>
+        <a href="/rental/">Historical Rentals</a>
+      </li>
+      <li>
+        <a href="/rental/new<%= %>">Start New Rental</a>
+      </li>
+
+      <hr/>
     </ul>
   </nav>
   <section id="content">
   <%= yield %>
   </section>
   </main>
+
 </body>
 </html>
