--- a/views/rentals/index_rental.erb
+++ b/views/rentals/index_rental.erb
@@ -1,8 +1,10 @@
-<h1>Rental</h1>
+<h1>Rental History</h1>
 
-<% for rental in @rentals %>
-<h2><%=rental.customer.format_name() %></h2>
-<h2><%=rental.bike.name() %></h2>
-<a href="/rentals/<%= rental.rental_id %>">More info</a>
+<% @rentals.each do |rental| %>
+<p>Customer: <%=rental.customer.name %></p>
+<p>Bike: <%=rental.bike.name %></p>
+<p>Date Rented: <%=rental.rental_date %></p>
+
+
 <hr/>
 <% end %>
