--- a/views/bikes/bike_available.erb
+++ b/views/bikes/bike_available.erb
@@ -1,5 +1,16 @@
 <h1>Bikes Available</h1>
 
+<p>
+  <a href="/bike/new<%= %>">Add New Bike</a>
+</p>
+<hr/>
+<p>
+  <a href="/bike/available">Bikes Available</a>
+</p>
+<hr/>
+<p>
+  <a href="/bike/unavailable">Current Rentals</a>
+</p>
 
 <hr/>
 <% @bikes.each do |bike| %>
