--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,20 +22,12 @@
         <a href="/customer/">Customers</a>
       </li>
       <li>
-        <a href="/bike/">All Bikes</a>
+        <a href="/bike/">Bikes</a>
       </li>
       <li>
-        <a href="/bike/available">Bikes Available</a>
+        <a href="/rental/">Rentals</a>
       </li>
-      <li>
-        <a href="/bike/unavailable">Current Rentals</a>
-      </li>
-      <li>
-        <a href="/rental/">Historical Rentals</a>
-      </li>
-      <li>
-        <a href="/rental/new<%= %>">Start New Rental</a>
-      </li>
+
 
       <hr/>
     </ul>
