--- a/public/styles/structure.css
+++ b/public/styles/structure.css
@@ -4,7 +4,7 @@ body {
   background-repeat: repeat;
   background-attachment: fixed;
   color: black;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Trebuchet', sans-serif;
   padding: 0px;
   margin: 200px;
 }
@@ -16,26 +16,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-    background-color: blue;
+    background-color: white;
 }
 
-h1 {
-  font-size: 10em;
-  color: black;
-  font
-  margin-bottom: 20px;
-  text-decoration: underline;
-  font-weight: bolder;
-  background-color: yellow;
-  text-align: center;
 
-}
 
-h2, h3, h4, h5, h6 {
-  border-left: 10px solid blue;
-  border-right: 10px solid blue;
+h1, h2, h3, h4, h5, h6 {
+  border-left: 10px solid white;
+  border-right: 10px solid white;
   padding-left: 25px;
-  background-color: blue;
+  background-color: white;
 }
 
 a, a:link, a:visited {
@@ -51,7 +41,7 @@ nav {
   padding: 0px;
   margin: 0px;
   padding-right: 25px;
-  background-color: green;
+  background-color: white;
 }
 
 nav ul li {
@@ -78,5 +68,5 @@ main {
 }
 
 label {
-    background-color: green;
+    background-color: white;
 }
