--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,12 @@
 <h1>Paul's Bike Rentals</h1>
 
+<hr> 
+
+<p>“Ride as much or as little, as long or as short as you feel. But ride” – Eddy Merckx</p>
+<p>“Don’t buy upgrades, ride up grades” – Eddy Merckx</p>
+<p>“When my legs hurt, I say: “Shut up legs! Do what I tell you to do!” – Jens Voigt</p>
+<p>“Cyclists see considerably more of this beautiful world than any other class of citizens. A good bicycle, well applied, will cure most ills this flesh is heir to” – Dr K.K. Doty</p>
+<p>“Give a man a fish and feed him for a day. Teach a man to fish and feed him for a lifetime. Teach a man to cycle and he will realize fishing is stupid and boring” – Desmond Tutu</p>
+<p>“A bicycle ride around the world begins with a single pedal stroke” – Scott Stoll</p>
+<p>“To me, it doesn’t matter whether it’s raining or the sun is shining or whatever: as long as I’m riding a bike I know I’m the luckiest guy in the world” – Mark Cavendish</p>
 <p></p>
