--- a/views/layout.erb
+++ b/views/layout.erb
@@ -27,14 +27,23 @@
       <li>
         <a href="/rental/">Rentals</a>
       </li>
+      <!-- <li>
+        <a href="/bike/:id">Search for Bike</a>
+      </li> -->
+      <li>
+        <a href="/about/">Price List</a>
+      </li>
 
 
       <hr/>
     </ul>
   </nav>
   <section id="content">
+
+
   <%= yield %>
   </section>
+
   </main>
 
 </body>
