--- a/public/styles/structure.css
+++ b/public/styles/structure.css
@@ -3,6 +3,7 @@ body {
   /* background-size: 100%; */
   background-repeat: repeat;
   background-attachment: fixed;
+  background-position: right;
   color: black;
   font-family: 'Trebuchet', sans-serif;
   padding: 0px;
@@ -16,7 +17,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-    background-color: white;
+  background-color: white;
 }
 
 
@@ -68,5 +69,5 @@ main {
 }
 
 label {
-    background-color: white;
+  background-color: white;
 }
