--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,45 +4,42 @@
   <title>Paul's Bike Rentals</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 
-  <!-- <link rel="icon" href="/images/"Mountain_biking.jpeg" /> -->
-
-  <link rel="stylesheet" type="text/css" href="/styles/buttons.css">
   <link rel="stylesheet" type="text/css" href="/styles/forms.css">
   <link rel="stylesheet" type="text/css" href="/styles/structure.css">
   <link rel="stylesheet" type="text/css" href="/styles/tables.css">
 </head>
 <body>
-<main class="flex flex--row">
-  <nav>
-    <ul>
-      <li>
-        <a href="/">Home</a>
-      </li>
-      <li>
-        <a href="/customer/">Customers</a>
-      </li>
-      <li>
-        <a href="/bike/">Bikes</a>
-      </li>
-      <li>
-        <a href="/rental/">Rentals</a>
-      </li>
-      <!-- <li>
-        <a href="/bike/:id">Search for Bike</a>
-      </li> -->
-      <li>
-        <a href="/about/">Price List</a>
-      </li>
+  <main class="flex flex--row">
+    <nav>
+      <ul>
+        <li>
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <a href="/customer/">Customers</a>
+        </li>
+        <li>
+          <a href="/bike/">Bikes</a>
+        </li>
+        <li>
+          <a href="/rental/">Rentals</a>
+        </li>
+        <li>
+          <a href="/bike/search">Search for Bike</a>
+        </li>
+        <li>
+          <a href="/about/">Price List</a>
+        </li>
 
 
-      <hr/>
-    </ul>
-  </nav>
-  <section id="content">
+        <hr/>
+      </ul>
+    </nav>
+    <section id="content">
 
 
-  <%= yield %>
-  </section>
+      <%= yield %>
+    </section>
 
   </main>
 
