--- a/views/bikes/index_bike.erb
+++ b/views/bikes/index_bike.erb
@@ -11,6 +11,9 @@
 <p>
   <a href="/bike/unavailable">Current Rentals</a>
 </p>
+<p>
+  <a href="/bike/search">Search for Bike</a>
+</p>
 
 <hr/>
 <% @bikes.each do |bike| %>
